--- a/index.html
+++ b/index.html
@@ -54,15 +54,12 @@ Welcome to my website :) design inspired by <a href="https://vulfpeck.com">vulfp
 =========================================
 Email: <a href="mailto:williamxyshi@gmail.com">williamxyshi@gmail.com</a> | Phone: +1 519 827 5978
 Check out my <a href="https://github.com/williamxyshi">GitHub</a>, <a href="https://www.linkedin.com/in/williamxyshi/">LinkedIn</a>, <a href="https://williamxyshi.itch.io/">itch.io</a>
-Check out what I'm working on at <a href="https://teahouseapps.app">TeaHouseApps</a>
 =========================================
-Engineering Student & Software Engineer
 Mechatronics Engineering @ uWaterloo
 I own an air fryer
 
 <b>Favourite tea:</b> shi feng long jing
-<b>Favourite tea shop:</b> <a href="https://camellia-sinensis.com/en/">Camellia Sinensis</a>
-<b>Technology I'm curious/learning about right now:</b> GraphQL, Next.js, blockchain oracles
+<b>Technology I'm curious/learning about right now:</b> Fuzzy controllers, RC planes
 <b>Important Questions I ask myself everyday:</b> How the heck do <strike>wind mills</strike> <strike>air fryers</strike> submarines work??
 
 <u><b>EXPERIENCE</b></u>
@@ -71,14 +68,19 @@ Work experiences in <b>bold</b>
 All projects I'm not too embarrassed about (yet) are linked
 =========================================
 <b>2021</b>
-	<b>SOFTWARE ENGINEERING INTERN@Your Company Here</b>
-		- May 2022 - Aug 2022
-		- Cool and important stuff I bet
-		- <a href="mailto:williamxyshi@gmail.com">Contact me!</a>
-
-	<b>ENGINEERING@Paq</b>
+	<b>SOFTWARE ENGINEER@Paq</b>
 		- Summer 2021 - Present
-		- Project + product
+		- Engineer #1
+		- Product + Development
+
+	<b>SOFTWARE ENGINEERING INTERN@Extend</b>
+		- May 2022 - Aug 2022
+		- Backend
+
+	<b>SOFTWARE ENGINEER@COWBELL CYBER</b>
+		- Sept 2021 - April 2022
+		- Intern in the fall and part time during the spring
+		- Backend team : spring, kafka, elasticsearch, postgres, java
 
 	<b>FOUNDER & LEAD DEVELOPER@TeaHouseApps</b>
 		- Winter 2020 - Summer 2021
