--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Work experiences in <b>bold</b>
 	<b>FOUNDER & LEAD DEVELOPER@TeaHouseApps</b>
 		- Winter 2020 - Summer 2021
 		- Managed team & business development
-		- Techincal design and development of products
+		- Technical design and development of products
 		- EZExpenses, TeaHouseOCR, teashop.tv
 
 	<a href="https://ezexpenses.app">EZExpenses</a>
