--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Work experiences in <b>bold</b>
 		- Winter 2020 - Summer 2021
 		- Business trip employee reimbursement simplification app
 		- Personal home/small business receipt tracking app
-		- Built with React, TailwindCSS, Express, Nodejs, MongoDB, DigitalOcean, Nginx, S3, Lambda
+		- Built with React, TailwindCSS, Express, Nodejs, MongoDB, DigitalOcean droplet->AWS ecosystem, Nginx
 
 	<a href="https://twittersentimentdashboard.netlify.app/">Twitter sentiment dashboard</a>
 		- Summer 2021
