--- a/index.html
+++ b/index.html
@@ -64,22 +64,13 @@
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</b>
 Welcome to my website :) design inspired by <a href="https://vulfpeck.com">vulfpeck.com</a>
 
-<u><b>ABOUT ME</b></u>
-=========================================
 Email: <a href="mailto:williamxyshi@gmail.com">williamxyshi@gmail.com</a> | Phone: +1 519 827 5978
 Check out my <a href="https://github.com/williamxyshi">GitHub</a>, <a href="https://www.linkedin.com/in/williamxyshi/">LinkedIn</a>, <a href="https://williamxyshi.itch.io/">itch.io</a>
-=========================================
-Mechatronics Engineering @ uWaterloo
-I own an air fryer
 
-<b>Favourite tea:</b> shi feng long jing
-<b>Technology I'm curious/learning about right now:</b> Fuzzy controllers, RC planes
-<b>Important Questions I ask myself everyday:</b> How the heck do <strike>wind mills</strike> <strike>air fryers</strike> submarines work??
+Building Artemis
+Mechatronics Engineering @ uWaterloo
 
 <u><b>EXPERIENCE</b></u>
-=========================================
-Work experiences in <b>bold</b>
-=========================================
 <b>2022</b>
 	<b>Co-Founder & CTO@Artemis</b>
 		- May 2022 - Present
