--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Mechatronics Engineering @ uWaterloo
 		- May 2022 - Aug 2022
 		- Backend
 		
-	<b>SOFTWARE ENGINEER@Paq</b>
+	<b>FOUNDING ENGINEER@Paq</b>
 		- Summer 2021 - Summer 2022
 		- Engineer #1
 		- Product + Development
