--- a/index.html
+++ b/index.html
@@ -62,7 +62,20 @@
 - - - - - - - - - - - - - - - - - - - - - - - - - - <i>official</i> - - - - - - - - - -
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - <i>site</i> - - - - - - 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</b>
-Welcome to my website :) design inspired by <a href="https://vulfpeck.com">vulfpeck.com</a>
+
+Let's chat!:<a href="https://calendly.com/will-artemis/30min">book a quick call</a>
+Email: <a href="mailto:williamxyshi@gmail.com">williamxyshi@gmail.com</a> | Phone: +1 519 827 5978
+Check out my <a href="https://github.com/williamxyshi">GitHub</a>, <a href="https://www.linkedin.com/in/williamxyshi/">LinkedIn</a>, <a href="https://williamxyshi.itch.io/">itch.io</a>
+
+CTO & Co-founder at Artemis - venture backed startup building turnkey managed data infrastructure & analytics for businesses. 
+
+Mechatronics Engineering at uWaterloo (2018-2023)
+Founding Engineer at Paq (Jun 2021-May 2022) - reuseable packaging startup. led software development
+Founder & Lead developer at Tea House Apps (2021) - b2b software solutions : spend management, receipt ocr & nfts ;)
+
+SWE intern at Extend, Cowbell, Flybits, Accedo.tv, Nanoleaf, Autodesk
+
+<!-- Welcome to my website :) design inspired by <a href="https://vulfpeck.com">vulfpeck.com</a>
 
 Email: <a href="mailto:williamxyshi@gmail.com">williamxyshi@gmail.com</a> | Phone: +1 519 827 5978
 Check out my <a href="https://github.com/williamxyshi">GitHub</a>, <a href="https://www.linkedin.com/in/williamxyshi/">LinkedIn</a>, <a href="https://williamxyshi.itch.io/">itch.io</a>
@@ -202,7 +215,7 @@ Mechatronics Engineering @ uWaterloo
 		- Summer 2018
 		- Remade a lite version of Europa Universalis IV
 		- Built with Python, pygame, tkinter
-		 
+		  -->
 
 (c) William Shi 2021
 </pre>
