--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Founder & Lead developer at Tea House Apps (2021) - b2b software solutions : spe
 
 SWE intern at Extend, Cowbell, Flybits, Accedo.tv, Nanoleaf, Autodesk
 
-(c) William Shi 2022
+last updated oct 2022
 
 <!-- Welcome to my website :) design inspired by <a href="https://vulfpeck.com">vulfpeck.com</a>
 
