--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@ Founder & Lead developer at Tea House Apps (2021) - b2b software solutions : spe
 
 SWE intern at Extend, Cowbell, Flybits, Accedo.tv, Nanoleaf, Autodesk
 
-last updated oct 2022
+<h4><a href="blog/blog.html">link to blog</a></h4>
+
+
+
+
 
 <!-- Welcome to my website :) design inspired by <a href="https://vulfpeck.com">vulfpeck.com</a>
 
