--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Founding Engineer at Paq (Jun 2021-May 2022) - reuseable packaging startup. led 
 Founder & Lead developer at Tea House Apps (2021) - b2b software solutions : spend management, receipt ocr & nfts ;)
 
 SWE intern at Extend, Cowbell, Flybits, Accedo.tv, Nanoleaf, Autodesk
-<h4><a target="_self" href="blog/blog.html">link to blog</a></h4>
+<h4><a target="_self" href="https://willshi.substack.com/">link to blog</a></h4>
 
 
 
