--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ Let's chat!: <a href="https://calendly.com/will-artemis/30min">calendly</a>
 CTO & Co-founder at Artemis - venture backed startup building turnkey managed data infrastructure & analytics for businesses. 
 
 Mechatronics Engineering student at uWaterloo (2018-2023)
-Founding Engineer at Paq (Jun 2021-May 2022) - reuseable packaging startup. led software development
-Founder & Lead developer at Tea House Apps (2021) - b2b software solutions : spend management, receipt ocr & nfts ;)
+Founding Engineer at Paq (2021-2022) - reuseable packaging startup. led software development
+Founder & Lead developer at Tea House Apps (2020-2021) - b2b software solutions : spend management, receipt ocr & nfts ;)
 
 SWE intern at Extend, Cowbell, Flybits, Accedo.tv, Nanoleaf, Autodesk
 <h4><a target="_self" href="https://willshi.substack.com/">link to blog</a></h4>
