--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 Email: <a href="mailto:williamxyshi@gmail.com">williamxyshi@gmail.com</a> | Phone: +1 519 827 5978
 Check out my <a href="https://github.com/williamxyshi">GitHub</a>, <a href="https://www.linkedin.com/in/williamxyshi/">LinkedIn</a>, <a href="https://williamxyshi.itch.io/">itch.io</a>
-Let's chat!: <a href="https://calendly.com/will-artemis/30min">calendly</a>
+Let's chat!: <a href="https://calendly.com/will-artemis/chat">calendly</a>
 
 CTO & Co-founder at Artemis - venture backed startup building turnkey managed data infrastructure & analytics for businesses. 
 
