--- a/index.html
+++ b/index.html
@@ -56,20 +56,19 @@
 
 
 	<pre>
-<b>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+<!-- <b>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 - - - <i> William Shi's </i> - - - - - - - - - - - - - - - - - - - - - - - - - - -
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 - - - - - - - - - - - - - - - - - - - - - - - - - - <i>official</i> - - - - - - - - - -
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - <i>site</i> - - - - - - 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</b>
-
-Email: <a href="mailto:williamxyshi@gmail.com">williamxyshi@gmail.com</a> | Phone: +1 519 827 5978
+--!>
+Email: <a href="mailto:williamxyshi@gmail.com">williamxyshi@gmail.com</a>
 Check out my <a href="https://github.com/williamxyshi">GitHub</a>, <a href="https://www.linkedin.com/in/williamxyshi/">LinkedIn</a>, <a href="https://williamxyshi.itch.io/">itch.io</a>
-Let's chat!: <a href="https://calendly.com/will-artemis/chat">calendly</a>
 
 CTO & Co-founder at Artemis - venture backed startup building turnkey managed data infrastructure & analytics for businesses. 
-
 Mechatronics Engineering student at uWaterloo (2018-2023)
+
 Founding Engineer at Paq (2021-2022) - reuseable packaging startup. led software development
 Founder & Lead developer at Tea House Apps (2020-2021) - b2b software solutions : spend management, receipt ocr & nfts ;)
 
