--- a/index.html
+++ b/index.html
@@ -51,18 +51,7 @@
 
 </head>
 
-<body>
-
-
-
-	<pre>
-<!-- <b>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-- - - <i> William Shi's </i> - - - - - - - - - - - - - - - - - - - - - - - - - - -
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-- - - - - - - - - - - - - - - - - - - - - - - - - - <i>official</i> - - - - - - - - - -
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - <i>site</i> - - - - - - 
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</b>
---!>
+<body><pre>
 Email: <a href="mailto:williamxyshi@gmail.com">williamxyshi@gmail.com</a>
 Check out my <a href="https://github.com/williamxyshi">GitHub</a>, <a href="https://www.linkedin.com/in/williamxyshi/">LinkedIn</a>, <a href="https://williamxyshi.itch.io/">itch.io</a>
 
