--- a/index.html
+++ b/index.html
@@ -62,156 +62,8 @@ Founding Engineer at Paq (2021-2022) - reuseable packaging startup. led software
 Founder & Lead developer at Tea House Apps (2020-2021) - b2b software solutions : spend management, receipt ocr & nfts ;)
 
 SWE intern at Extend, Cowbell, Flybits, Accedo.tv, Nanoleaf, Autodesk
-<h4><a target="_self" href="https://willshi.substack.com/">link to blog</a></h4>
+<h4><a target="_self" href="https://williamxyshi.bearblog.dev/">link to blog</a></h4>
 
 
 
 
-
-<!-- Welcome to my website :) design inspired by <a href="https://vulfpeck.com">vulfpeck.com</a>
-
-Email: <a href="mailto:williamxyshi@gmail.com">williamxyshi@gmail.com</a> | Phone: +1 519 827 5978
-Check out my <a href="https://github.com/williamxyshi">GitHub</a>, <a href="https://www.linkedin.com/in/williamxyshi/">LinkedIn</a>, <a href="https://williamxyshi.itch.io/">itch.io</a>
-
-Building Artemis
-Mechatronics Engineering @ uWaterloo
-
-<u><b>EXPERIENCE</b></u>
-<b>2022</b>
-	<b>Co-Founder & CTO@Artemis</b>
-		- May 2022 - Present
-		- Data Infrastructure and Analytics as a Service
-		- Leading development of core services and platform	
-
-	<b>SOFTWARE ENGINEERING INTERN@Extend</b>
-		- May 2022 - Aug 2022
-		- Backend
-		
-	<b>FOUNDING ENGINEER@Paq</b>
-		- Summer 2021 - Summer 2022
-		- Engineer #1
-		- Product + Development
-
-	<b>SOFTWARE ENGINEER@COWBELL CYBER</b>
-		- Sept 2021 - April 2022
-		- Intern in the fall and part time during the spring
-		- Backend team : spring, kafka, elasticsearch, postgres, java
-
-<b>2021</b>
-	<b>FOUNDER & LEAD DEVELOPER@TeaHouseApps</b>
-		- Winter 2020 - Summer 2021
-		- Managed team & business development
-		- Technical design and development of products
-		- EZExpenses, TeaHouseOCR, teashop.tv
-
-	<a href="https://ezexpenses.app">EZExpenses</a>
-		- Winter 2020 - Summer 2021
-		- Business trip employee reimbursement simplification app
-		- Personal home/small business receipt tracking app
-		- Built with React, TailwindCSS, Express, Nodejs, MongoDB, DigitalOcean droplet->AWS ecosystem, Nginx
-
-	<a href="https://twittersentimentdashboard.netlify.app/">Twitter sentiment dashboard</a>
-		- Summer 2021
-		- NLP Sentiment analysis dashboard of twitter feed
-		- Built for a coding assignment for Certik in 2 days, but they ghosted me
-		- Built with React, TailwindCSS, Express, Nodejs, Heroku
-
-	<a href="https://teashop.tv">teashop.tv</a>
-		- Spring 2021
-		- NFT marketplace platform for content creators
-		- Built with React, TailwindCSS, Express, Nodejs, Alchemy Supernode, web3js, Pinata, Firebase, Compute Engine, Cloud SQL
-
-	<b>SOFTWARE ENGINEERING INTERN@Flybits</b>
-		- Jan 2021 - Apr 2021
-		- Mobile SDK CE Squad
-
-	<a href="https://www.teahouselabs.app">Tea House OCR</a>
-		- Winter 2021
-		- Public OCR REST API that pulls data from template key value pairs 
-		- Built with React, TailwindCSS, Tesseract, OpenCV, Numpy, Flask, Nginx, EC2
-
-<b>2020</b>
-	<a href="https://www.gamerclub.app">GamerClub</a>
-		- Fall 2020
-		- Book clubs for video games
-		- Went semi - viral on Reddit and acquired a bunch of users during the first month (pretty much no one used it twice)
-		- Built with React, Express, Nodejs, MongoDB, Heroku
-	
-	<b>ANDROID DEVELOPER INTERN@Accedo.tv</b>
-		- May 2020 - Aug 2020
-		- Accedo One and CTV, CP24 and BNNBloomberg app teams
-
-	<a href="https://williamxyshi.itch.io/">Boulabos Game Jammers</a>
-		- Summer 2020
-		- Participated in GMTK 2020 and United Game Jams
-		- We jammed using Unity
-
-	30 Days of Flutter
-		- Summer 2020
-		- Flutter app a day for 30 days
-		- Quit after 3 days
-		- I love Flutter, I hate finishing an app a day
-
-	<a href="https://www.plantdoctor.info">PlantDoctor</a>
-		- Summer 2020
-		- NLP web app that parses r/plantclinic comments to categorize and visualize treatment options for dying houseplants
-		- Heroku free tier + inefficient NLP = long wait times
-		- Built with React, Express, Nodejs, NLP.js, Heroku
-		
-	<a href="https://github.com/williamxyshi/share-the-JUMPscare ">share the JUMPscare</a>
-		- Summer 2020
-		- Android app where users post jump scare time stamps to movies
-		- Learned making an app that needs users sucks
-		- Built with Android, Express, Nodejs, MongoDB
-
-	teagether
-		- Spring 2020
-		- Video chat tea parties in online rooms
-		- Built with React, Express, Nodejs, socket.io
-
-	WizAutoChess
-		- Winter 2020
-		- Auto chess battler with fantasy setting on mobile
-		- Built with Unity, Flask, Beanstalk
-   
-<b>2019</b>
-	<a href="https://play.google.com/store/apps/details?id=com.willjane.teabuddy">TeaBuddy</a>
-		- Fall 2019
-		- Tea companion + social media Android App 
-		- Built with Android, Firebase, Realm
-
-	<b>ANDROID DEVELOPER INTERN@Nanoleaf</b>
-		- Sep 2019 - Dec 2019
-		- Android App team
-
-	true shoe
-		- Fall 2019
-		- Flutter app that recommends shoes based on the weather
-		- Built with Flutter, Firebase
-	
-	tankagons.io
-		- Summer 2019
-		- Multiplayer tank shooter game inspired by diep.io 
-		- Built with python, pygame, pysocket
-
-	<b>SOFTWARE ENGINEERING INTERN@Autodesk</b>
-		- Jan 2019 - Apr 2019
-		- Flame CE team
-	
-	Marshal Lannes Simulator
-		- Spring 2019
-		- Play as marshal lannes and dodge cannon balls in 2D sidescrolling platformer
-		- Built with C++, SDL2, CMake
-
-<b>2018</b>
-	EU Remade
-		- Summer 2018
-		- Remade a lite version of Europa Universalis IV
-		- Built with Python, pygame, tkinter
-		  -->
-</pre>
-
-
-</body>
-
-</html>
