--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
 </head>
 
 <body><pre>
-Email: <a href="mailto:williamxyshi@gmail.com">williamxyshi@gmail.com</a>
+Contact: williamxyshi | gmail.com
 Check out my <a href="https://github.com/williamxyshi">GitHub</a>, <a href="https://www.linkedin.com/in/williamxyshi/">LinkedIn</a>, <a href="https://williamxyshi.itch.io/">itch.io</a>
 
 CTO & Co-founder at Artemis - venture backed startup building turnkey managed data infrastructure & analytics for businesses. 
-Mechatronics Engineering student at uWaterloo (2018-2023)
 
+Mechatronics Engineering at uWaterloo (2018-2023)
 Founding Engineer at Paq (2021-2022) - reuseable packaging startup. led software development
 Founder & Lead developer at Tea House Apps (2020-2021) - b2b software solutions : spend management, receipt ocr & nfts ;)
-
 SWE intern at Extend, Cowbell, Flybits, Accedo.tv, Nanoleaf, Autodesk
+
 <h4><a target="_self" href="https://williamxyshi.bearblog.dev/">link to blog</a></h4>
 
 
