--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
             </ul>
         </nav>
 	<pre>
-		cto & cofounder at Artemis -- building data operating systems for analysts and agents
+		CTO & Co-Founder at Artemis -- building data operating systems for analysts and agents
 	</pre>
         <pre hidden>
-            cto & cofounder at Artemis -- venture backed startup building data operating systems for analysts and agents -- raven, telegraph hill, ripple, id4, jim, florent, solomon 
-
+            CTO & Co-Founder at Artemis -- venture backed startup building data operating systems for analysts and agents -- raven, telegraph hill, ripple, id4, jim, florent, solomon 
+	</br>
             uWaterloo, Paq, TeaHouseApps, Extend, Cowbell, Flybits, Accedo.tv, Nanoleaf, Autodesk
 	</pre>
     </div>
