--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </ul>
         </nav>
 	<pre>
-		CTO & Co-Founder at Artemis -- building data operating systems for analysts and agents
+		CTO & Co-Founder at <a href="https://www.artemisdata.io">Artemis</a> -- building data operating systems for analysts and agents
 	</pre>
         <pre hidden>
             CTO & Co-Founder at Artemis -- venture backed startup building data operating systems for analysts and agents -- raven, telegraph hill, ripple, id4, jim, florent, solomon 
